Fixed extra margin above banner

--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -3,7 +3,6 @@
   display: grid;
   justify-content: center;
   background-color: white;
-  margin-top: calc(1.3vh);
   width: 100%;
   color: black; 
   height: 28px;
@@ -18,7 +17,7 @@
   .banner 
   {
     position: fixed;
-    top: 66px;
+    top: 75px;
   }
 }
 
